--- a/proiect.vcxproj
+++ b/proiect.vcxproj
@@ -141,12 +141,12 @@
   <ItemGroup>
     <ClInclude Include="Bilete.h" />
     <ClInclude Include="Eveniment.h" />
-    <ClInclude Include="Locatii.h" />
+    <ClInclude Include="Locatie.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Bilete.cpp" />
     <ClCompile Include="Eveniment.cpp" />
-    <ClCompile Include="Locatii.cpp" />
+    <ClCompile Include="Locatie.cpp" />
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
