--- a/proiect.vcxproj.filters
+++ b/proiect.vcxproj.filters
@@ -18,7 +18,7 @@
     <ClInclude Include="Eveniment.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Locatii.h">
+    <ClInclude Include="Locatie.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Bilete.h">
@@ -32,7 +32,7 @@
     <ClCompile Include="Source.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Locatii.cpp">
+    <ClCompile Include="Locatie.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Bilete.cpp">
