--- a/proiect.vcxproj.filters
+++ b/proiect.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="Bilete.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="BiletValid.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Eveniment.cpp">
@@ -36,6 +39,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Bilete.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="BiletValid.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
